--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -75,7 +75,7 @@ p{
 }
 
 .landerDivvy{
-    background-image: url("../Images/swan.jpg");
+    background-image: url("Images/swan.jpg");
     max-width: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -110,7 +110,7 @@ p{
 
 
 .photoDi{
-  background-image: url("../Images/rioUnderSat.jpg");
+  background-image: url("Images/rioUnderSat.jpg");
   max-width: 100%;
   background-position: center;
   background-repeat: no-repeat;
