--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -214,10 +214,18 @@ p{
 @media (max-width:1028px) {
 
 body{
-  font-size: 1rem;
+  font-size: 2rem;
+}
+
+p{
+  font-size: 2rem;
+  font-weight: 600;
 }
 
 h1 {font-size: 3rem;}
+}
+
+.landerDivvy{
 }
 
 
