--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -70,7 +70,6 @@ p{
 .landerDi{
   padding: 15% 10% 15%;
   text-align: center;
-  background-color: #;
   z-index: -1;
   height: 100%;
   background-image: url(../images/Plane.jpg);
@@ -93,14 +92,6 @@ p{
   }
   /* opacity: 90%; */
 
-
-
-
-
-.title{
-
-
-}
 
 /* photo */
 
@@ -183,6 +174,7 @@ p{
   color: #0B0A11;
     position: relative;
     float: center;
+    padding: 5rem;
 }
 
 .butty:hover{
@@ -219,6 +211,10 @@ p{
 
 
 @media (max-width:1024px) {
+
+  #navbar a {
+    font-size: 2rem;
+  }
 
 body{
   font-size: 1.5rem;
