--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -217,14 +217,18 @@ p{
   }
 
 body{
-  font-size: 1.5rem;
+  font-size: 2rem;
+  text-align: center;
 }
 
 p{
   font-size: 1.5rem;
+  padding: 2rem;
 }
 
-h1 {font-size: 4rem;}
+h1 {
+  font-size: 5rem;
+  padding: 2rem;
 }
 
 
