--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -216,6 +216,10 @@ p{
     font-size: 2rem;
   }
 
+  #navbar button{
+    font-size: 1.5rem;
+  }
+
 body{
   font-size: 2rem;
   text-align: center;
@@ -223,16 +227,15 @@ body{
 
 p{
   font-size: 1.5rem;
-  padding: 2rem;
 }
 
 h1 {
   font-size: 5rem;
-  padding: 2rem;
+  padding: 6rem 0 7rem;
 }
 
 .mobilePad{
-  padding: 12% 3%, 15% !important; 
+  padding: 12% 3%, 16% !important;
 }
 
 }
