--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -226,11 +226,15 @@ body{
 
 p{
   font-size: 3rem;
+  text-align: center !important;
+  text-align: center !important;
 }
 
 h1 {
-  font-size: 6rem;
-  padding: 6rem 0 7rem;
+  font-size: 7rem;
+  text-align: center !important;
+  text-align: center !important;
+  margin-left: 0;
 }
 
 .mobilePad{
